new features added

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
       body {
         font-family: "Helvetica Neue", Arial, sans-serif;
       }
+
+      * {
+        padding: 0;
+        margin: 0;
+      }
     </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
